# OCR-Product

./: README.md  pyproject.toml  requirement.txt
Code/: Pre-Processing.ipynb  updated_thai_word_vector.model
Code/.ipynb_checkpoints/: Post-Processing-checkpoint.ipynb  Pre-Processing-checkpoint.ipynb
